[DOCKER-468]: added special module flags for older tomcat (apparantly this was in the logs?)